--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,23 @@
             <scope>test</scope>
         </dependency>
 
+
+        <!-- Source: https://mvnrepository.com/artifact/org.mockito/mockito-core
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        -->
+
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.8.1</version> <!-- use a mesma versão do Mockito do projeto -->
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
